Support Windows MSI installers.